2009-10-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/scan.pm: Scan using violation_trigger mechanism now
	Also moved IP to MAC test earlier and quit if it can't resolve

	* pf/lib/pf/violation.pm: Preparing violation_trigger to handle scan 
	violations
	- new test: scan violation id not authorized in config
	- took out of the trigger id loop various one time tests (inefficient)
	- violation trigger returns 1 if at least one violation is added 0 
	  otherwise
	- bonus POD doc

	* pf/cgi-bin/pdp.cgi, pf/sbin/pfdetect: Fixed trappable ip test to add
	a violation.

2009-10-21	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/sbin/pfdetect: pfdetect now sends IP when calling violation_trigger
	since the information is already available to it anyway

	* pf/lib/pf/violation.pm: Using $bin_dir instead of hardcoded path
	to call pfcmd. Closes a TODO task.

	* pf/lib/pf/scan.pm, pf/bin/pfcmd, pf/lib/pf/trigger.pm: Refactoring
	Moved all scanning code out of pfcmd into a new scan module

	* pf/bin/pfcmd, pf/lib/pf/schedule.pm: Nessus scan integration
	Removed all references of trigger id (tid) regarding scanning

	* pf/lib/pf/pfcmd/help.pm: pfcmd schedule documentation now accurate

	* pf/bin/pfcmd, pf/cgi-bin/release.cgi, pf/html/admin/scan/scan.php:
	Nessus Scan integration
	No more special scans with tid=99999 carrying a special meaning. All
	scanning is done with command line nessus client instead of 
	Nessus::ScanLite (which lacked plugin configuration capabilities). Other
	fixes includes:
	- Removing the 1200001 violation only if one exists (fix a problem when
	  scanning from Web admin)
	- Set HOME= env before calling nessus to conf/nessus/ so the .nessusrc 
	  file is created at a location accessible from CLI and web interfaces
	- Capturing the output of the nessus call and logging it if nessus 
	  returns a non-zero exit code
	- trigger_scan is deprecated
	- Updated web admin accordingly and explicitly disabled scheduled scans
