@@ -37,7 +37,7 @@ BEGIN {
     @ISA = qw(Exporter);
     @EXPORT
         = qw(trigger_db_prepare trigger_view trigger_view_enable trigger_view_all trigger_delete_all
-        trigger_in_range trigger_add trigger_view_type trigger_view_tid trigger_scan trigger_scan_add);
+        trigger_in_range trigger_add trigger_view_type trigger_view_tid);
 }
 
 use pf::config;
@@ -186,168 +186,6 @@ sub trigger_add {
         || return (0);
     $logger->debug("trigger $tid_start $tid_end added");
     return (1);
-}
-
-sub trigger_scan {
-    my ( $addr, $tids ) = @_;
-    my $logger = Log::Log4perl::get_logger('pf::trigger');
-    eval "use Net::Nessus::ScanLite; 1" || return (0);
-    my @return;
-    return -1 if ( !$addr );
-    my $host = $Config{'scan'}{'host'};
-    my $port = $Config{'scan'}{'port'};
-    my $user = $Config{'scan'}{'user'};
-    my $pass = $Config{'scan'}{'pass'};
-    my $ssl  = isenabled( $Config{'scan'}{'ssl'} );
-    my @ref  = trigger_view_type("scan");
-    my $pluginlist;
-    my $holefound = 0;
-
-    if ( !$tids || $tids =~ /^all$/i ) {
-        foreach my $row (@ref) {
-            for (
-                my $i = $row->{'tid_start'};
-                $i <= $row->{'tid_end'};
-                $i++
-                )
-            {
-                $pluginlist .= "$i;";
-            }
-        }
-        chop($pluginlist);
-    } else {
-        return -1 if ( $tids !~ /^[\d|;| ]+$/ );
-        $pluginlist = $tids;
-    }
-    return 0 if ( !$pluginlist );
-    my $trigger = Net::Nessus::ScanLite->new(
-        host => $host,
-        port => $port,
-        ssl  => $ssl,
-    );
-
-    $trigger->preferences(
-        {   host_expansion      => 'none',
-            safe_checks         => 'yes',
-            checks_read_timeout => 1
-        }
-    );
-    $trigger->plugin_set($pluginlist);
-    $logger->debug(
-        "plug = $pluginlist addr = $addr user =$user port = $port host = $host ssl = $ssl\n"
-    );
-    if ( $trigger->login( $user, $pass ) ) {
-        $logger->info("starting to trigger node(s) $addr");
-        $trigger->attack($addr);
-        $logger->info( "Address $addr total info: "
-                . $trigger->total_info
-                . " Total holes: "
-                . $trigger->total_holes );
-        push @return,
-              "Address $addr total info: "
-            . $trigger->total_info
-            . " Total holes: "
-            . $trigger->total_holes . "\n";
-        foreach my $info ( $trigger->info_list ) {
-            my $srcmac = ip2mac( $info->Host );
-            push(
-                @return,
-                join "|",
-                (   0,           $srcmac,
-                    $info->Host, $info->ScanID,
-                    0,           $info->Port,
-                    $info->Description
-                )
-            );
-            $logger->info( "Info ID: "
-                    . $info->ScanID
-                    . "  Host: "
-                    . $info->Host
-                    . " Port: "
-                    . $info->Port );
-            trigger_scan_add($info);
-        }
-        foreach my $info ( $trigger->hole_list ) {
-            my $tid    = $info->ScanID;
-            my $srcmac = ip2mac( $info->Host );
-            push(
-                @return,
-                join "|",
-                (   1,    $srcmac,     $info->Host,
-                    $tid, $info->Port, $info->Description
-                )
-            );
-            $logger->info( "Hole ID: "
-                    . $info->ScanID
-                    . "  Host: "
-                    . $info->Host
-                    . " Port: "
-                    . $info->Port );
-            trigger_scan_add($info);
-        }
-    } else {
-        push( @return,
-                  "trigger_scan: Nessus login failed: "
-                . $trigger->code . ": "
-                . $trigger->error
-                . "\n" );
-        $logger->error( "Nessus login failed: "
-                . $trigger->code . ": "
-                . $trigger->error );
-    }
-
-    return (@return);
-}
-
-=item trigger_scan_add - Evaluates violation triggers for Scan 
-
-Returns 1 if a violation is added, 0 otherwise.
-
-=cut 
-
-sub trigger_scan_add {
-    my ($info) = @_;
-    my $logger = Log::Log4perl::get_logger('pf::trigger');
-    my $tid;
-    my $host;
-    if ( ref($info) eq 'HASH' ) {
-        $tid  = $info->{'ScanID'};
-        $host = $info->{'Host'};
-    } else {
-        $tid  = $info->ScanID;
-        $host = $info->Host;
-    }
-    my $srcmac = ip2mac( $host );
-    if ( !$srcmac ) {
-        $logger->error( "MAC address for "
-                . $host
-                . " not found can not add violation" );
-        return 0;
-    }
-    if ( defined $Config{'scan'}{'live_tids'}
-        && grep(
-            { $_ eq $tid } split( /\s*,\s*/, $Config{'scan'}{'live_tids'} ) )
-        )
-    {
-        $logger->info("Trying to add trigger $tid for ($srcmac) (".$host.")");
-        my @trigger_info = trigger_view_enable( $tid, "scan" );
-        if ( !scalar(@trigger_info) ) {
-            $logger->info("violation not added, no trigger found for scan::${tid} or violation is disabled");
-            return 0;
-        }
-        foreach my $row (@trigger_info) {
-            my $vid = $row->{'vid'};
-            #violation_add( $srcmac, $vid );
-            # TODO should call violation_trigger instead here to honor whitelist, untrappable MACs, etc.
-            `/usr/local/pf/bin/pfcmd violation add vid=$vid,mac=$srcmac`;
-            return 1;
-        }
-    } else {
-        $logger->warn("NOT ADDING Trigger id: $tid for $srcmac (" . $host . 
-                      ") please add $tid to scan.live_tids if you would like this done"
-        );
-    }
-    return 0;
 }
 
 sub trigger_in_range {
